# genvm

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .ya-test.py  LICENSE  README.md  configure.rb  env.sh  flake-config.json  flake.nix
.git-third-party/: config.json
.github/workflows/: deploy-docs.yml  genvm-build-runners.yaml  incl_build_trg.yaml  incl_docs.yml  incl_initial.yaml  nightly-docs.yaml  pr.yaml  queue.yaml  release.yaml  release.yml  webdriver-image.yaml
build-scripts/devenv/: flake.nix
doc/adr/: 000. WASI.md  001. sandboxing.md  002. code loading.md  003. host communication.md  004. calldata.md  005. abi.md  006. contract deployment.md  007. floats.md  008. storage.md  009. code upgradability.md  010. versions.md
doc/schemas/: default-config.json
doc/website/: .gitignore  merge-txts.rb  pyproject.toml  yabuild.rb
doc/website/src/: conf.py
doc/website/src/api/: boot_process.rst  changelog.rst  genlayer.rst  index.rst
doc/website/src/impl-spec/: glossary.rst  index.rst
doc/website/src/impl-spec/01-core-architecture/: 01-components.rst  02-host-interface.rst  03-modules.rst  04-manager.rst  index.rst
doc/website/src/impl-spec/01-core-architecture/03-modules/: 01-web.rst  02-llm.rst  03-greyboxing.rst  index.rst
doc/website/src/impl-spec/02-vm/: 01-wasm-runtime.rst  index.rst
doc/website/src/impl-spec/appendix/: host-loop.rst  index.rst  message-schema.rst  runners-versions.rst
doc/website/src/spec/: index.rst
doc/website/src/spec/01-core-architecture/: 01-components.rst  02-vm.rst
doc/website/src/spec/02-execution-environment/: 01-wasm.rst  02-wasip1.rst  03-wasi_genlayer_sdk.rst  04-runners.rst  index.rst
doc/website/src/spec/03-vm/: 01-result.rst  02-sandboxing.rst  03-ram-limiting.rst  04-determinism-mode-switching.rst  index.rst
doc/website/src/spec/04-contract-interface/: 01-calldata.rst  02-abi.rst  03-storage.rst  04-upgradability.rst  05-execution-flow.rst  index.rst
doc/website/src/spec/appendix/: index.rst  runner-schema.rst
executor/: Cargo.toml  default.nix  yabuild.rb
executor/codegen/data/: host-fns.json  public-abi.json
executor/codegen/templates/: rst.rb
executor/common/: Cargo.toml  build.rs
executor/common/src/: cancellation.rs  lib.rs  stats.rs  sync.rs  version.rs
executor/common/src/calldata/: de.rs  types.rs
executor/common/src/logger/: mod.rs
executor/common/src/util/: mmap.rs  mod.rs  str.rs
executor/fuzz/: genvm-executor.rs  genvm-storage.rs
executor/fuzz/genvm-executor/: a-exports.wat  a-imports.wat  b-exports.wat  b-imports.wat
executor/install/config/: genvm.yaml
executor/install/lib/python/post-install/: __main__.py  requirements.txt
executor/modules/implementation/src/llm/: mod.rs
executor/modules/implementation/src/scripting/: mod.rs
executor/modules/implementation/src/scripting/ctx/: dflt.rs  mod.rs  signing.rs
executor/modules/implementation/src/web/: ctx.rs  handler.rs  mod.rs
executor/modules/interfaces/src/: lib.rs
executor/src/: caching.rs  config.rs  lib.rs  main.rs  modules.rs  public_abi.rs  version_timestamps.rs  vm.rs
executor/src/exe/: mod.rs  parse_version.rs  precompile.rs  run.rs
executor/src/host/: host_fns.rs  message.rs  mod.rs
executor/src/rt/: errors.rs  memlimiter.rs  mod.rs
executor/src/rt/supervisor/: actions.rs  compilation.rs  mod.rs
executor/src/rt/vm/: mod.rs  storage.rs
executor/src/runners/: actions.rs  cache.rs  mod.rs  parse.rs  ustar.rs
executor/src/wasi/: common.rs  genlayer_sdk.rs  gl_call.rs  mod.rs  preview1.rs  vfs.rs
executor/testdata/cases/: _hello_world_class.jsonnet  _hello_world_class_nondet.jsonnet
executor/testdata/cases/module/: pil.jsonnet
executor/testdata/cases/py-core/balances/: balance.jsonnet
executor/testdata/cases/py-core/embeddings/: vecdb.jsonnet
executor/testdata/cases/py-core/erroring/: oom.jsonnet
executor/testdata/cases/py-core/leader_errors/: simple_valid_err_exit_wrong_err.stdout  simple_valid_err_nerr.stdout
executor/testdata/cases/py-core/nondet/validator/: disagree.stdout  sync.jsonnet
executor/testdata/cases/self-run/: re.jsonnet
executor/testdata/runner/: base_host.py  host_fns.py  run.py
libs/: default.nix  iconv.nix  libc.nix  liblua.nix
modules/: default.nix
modules/implementation/: .ya-test-config.json  Cargo.toml
modules/implementation/fuzz/: features.txt  genvm-modules-complete-json.rs  genvm-modules-normalize-whitespace.rs
modules/implementation/fuzz/inputs-genvm-modules-complete-json/: 1
modules/implementation/src/: lib.rs  main.rs
modules/implementation/src/common/: mod.rs
modules/implementation/src/llm/: config.rs  ctx.rs  handler.rs  mod.rs  prompt.rs  providers.rs
modules/implementation/src/manager/: handlers.rs  mod.rs  modules.rs  run.rs  versioning.rs
modules/implementation/src/scripting/: mod.rs
modules/implementation/src/scripting/ctx/: dflt.rs  filters.rs  mod.rs  req.rs  signing.rs
modules/implementation/src/web/: config.rs  ctx.rs  domains.rs  handler.rs  mod.rs
modules/implementation/tests/lua/: bytes.lua  get_status.lua
modules/interfaces/: Cargo.toml
modules/interfaces/src/: lib.rs
modules/webdriver/: .dockerignore  Dockerfile  build-and-run.sh
runners/: build-here.nix  default.nix  docs.nix  hashes.nix  release.nix
runners/genlayer-py-std/: default.nix  pyproject.toml
runners/support/: default.nix  match-tags.py
support/: compile-rust.nix  default.nix  runner-script.py  rust.nix  zig.nix
support/ci/: cargo-clippy.sh  cargo-fmt.sh  shebang.py
support/scripts/: patch-and-check-manifest.py  remove-schema.py
tests/: .ya-test.py  rust.sh
tools/ya-test-runner/: .gitignore  .pre-commit-config.yaml  pyproject.toml
tools/ya-test-runner/ya_test_runner/: __init__.py  __main__.py  const.py  formatter.py  test.py
tools/ya-test-runner/ya_test_runner/exec/: __init__.py  command.py  service.py  step.py
tools/ya-test-runner/ya_test_runner/stage/: __init__.py  collection.py  configuration.py  execution.py  filter.py  report.py  scheduling.py
tools/ya-test-runner/ya_test_runner/util/: __init__.py  environ.py
(+359 files in other folders)
