[package]
name = "genvm"
version = "0.1.0"
edition = "2021"
[profile.dev.package.wasmtime]
opt-level = 2
[profile.dev.package.wasmparser]
opt-level = 2

[profile.release]
debug = true

[lints.rust]
# this is needed for wasmtime :(
static_mut_refs = "allow"

[[example]]
name = "fuzz-genvm-executor"
path = "fuzz/genvm-executor.rs"

[[example]]
name = "fuzz-genvm-storage"
path = "fuzz/genvm-storage.rs"

[dependencies]
# 432745aca5ee802255935768125810fcba38dae0
wasmtime = { path = "third-party/wasmtime/crates/wasmtime", default-features = false, features = ["cranelift", "std", "parallel-compilation", "cache", "demangle"] }
wasmtime-cache = { path = "third-party/wasmtime/crates/cache" }
wiggle = { path = "third-party/wasmtime/crates/wiggle", default-features = false, features = ["wasmtime_async"] }
wasmparser = { path = "third-party/wasm-tools/crates/wasmparser" }

genvm-common = { path = "common" }
genvm-modules-interfaces = { path = "../modules/interfaces" }

anyhow = { version = "1.0.97", default-features = false }
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["rc"]}
serde_json = "1.0.140"
clap = { version = "4.5.35", features = ["derive"] }
serde_with = { version = "3.12.0", features = ["base64"] }
itertools = "0.14.0"
zip = "4.0.0"
signal-hook = "0.3.17"
once_cell = "1.21.3"
chrono = { version = "0.4.41", default-features = false, features = ["clock", "std", "serde"] }
base64 = "0.22.1"
symbol_table = { version = "0.4.0", features = ["global", "serde"] }
serde_derive = "1.0.219"
sha3 = { version = "0.10.8", features = ["asm"] }
base32 = "0.5.1"
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "net", "time", "macros", "sync", "fs"], default-features = false}
async-trait = "0.1.88"
dashmap = "6.1.0"
primitive-types = { version = "0.13.1", default-features = false, features = ["impl-serde", "std"] }
bufreaderwriter = "0.2.4"
serde_yaml = "0.9.34"
getrandom = { version = "0.3.2", default-features = false, features = ["std"] }
tokio-tungstenite = "0.26.2"
futures-util = "0.3.31"
num-bigint = { version = "0.4.6", features = ["serde"] }
hex = "0.4.3"
serde_bytes = "0.11.17"
mt19937 = "3.1.0"
rand_core = "0.9.3"
crossbeam = "0.8.4"
arbitrary = { version = "1.0.3", features = [ "derive" ] }
rpds = "1.2.0"
archery = "1.2.2"
bytes = { version = "1.11.0", features = ["serde"] }
tokio-mpmc = "0.2.4"

[dev-dependencies]
afl = { version = "0.15.18", features = ["no_cfg_fuzzing"] }
wat = { path = "third-party/wasm-tools/crates/wat" }
wasm-smith = { path = "third-party/wasm-tools/crates/wasm-smith", features = ["wasmparser"]}
wasm-encoder = { path = "third-party/wasm-tools/crates/wasm-encoder"}
libc = "0.2.162"
#wasm-encoder = { path = "third-party/wasm-tools/crates/wasm-encoder", default-features = false, features = ["wasmparser"]}
#wasmtime-fuzzing = { path = "third-party/wasmtime/crates/fuzzing", default-features = false }
