[tool.poetry]
name = "genvm-docstypesgen"
version = "0.0.1"
description = ""
authors = ["GenLayer"]

[tool.poetry.dependencies]
python = "^3.12"
sphinx = "^8.1.3"
pyright = "^1.1.390"
pydata-sphinx-theme = "^0.16.0"
numpy = "^2.1.3"
sphinxcontrib-mermaid = "^1.0.0"
sphinxcontrib-httpdomain = "^1.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
