[package]
name = "genvm-common"
version = "0.1.0"
edition = "2021"

[[example]]
name = "fuzz-genvm-common-decode"
path = "fuzz/genvm-common-decode.rs"

[[example]]
name = "fuzz-genvm-common-encode"
path = "fuzz/genvm-common-encode.rs"

[profile.release]
debug = true

[dependencies]
anyhow = "1.0.97"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "net", "time", "macros", "sync"], default-features = false}
num-bigint = { version = "0.4.6", features = ["serde"] }
hex = "0.4.3"
primitive-types = { version = "0.13.1", default-features = false, features = ["impl-serde", "std"] }
crossbeam = "0.8.4"
rustix = { version = "0.38.44", features = ["mm", "std"], default-features = false}
symbol_table = { version = "0.4.0", features = ["global"] }
dashmap = "6.1.0"

[dev-dependencies]
afl = { version = "0.15.18", features = ["no_cfg_fuzzing"] }
