[package]
name = "genvm-modules-interfaces"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "net", "time", "macros", "sync"], default-features = false}
serde = { version = "1.0.219", features = ["rc"]}
serde_json = "1.0.140"
serde_derive = "1.0.219"
regex = { version = "1.11.1", default-features = false, features = ["std"] }
serde_bytes = "0.11.17"
